// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text resizer does not render if textSize is null 1`] = `
<div
  className="styled__TopBarWrapper-sc-12dq39v-0 aQNQa"
  data-testid="topbar"
>
  <div
    className="styled__SearchPrintWrapper-sc-12dq39v-9 cHhLGz"
  >
    <div
      className="styles__NudgeElementTarget-hrv0cf-10 BGmTi"
      id="mobile-menu-button"
    >
      <button
        aria-label="Click to open menu"
        className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__MenuButton-sc-12dq39v-2 bDNWEV"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-sc-ea9ulj-0 gWDkVc styled__HamburgerIcon-sc-12dq39v-1 fKwlfW"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 96c0-17.7 14.3-32 32-32h384c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zm0 160c0-17.7 14.3-32 32-32h384c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zm448 160c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32h384c17.7 0 32 14.3 32 32z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form
      className="styled__SearchInputWrapper-sc-12dq39v-7 hpkAyy"
      data-experiment={true}
      data-testid="desktop-search"
      onSubmit={[Function]}
    >
      <input
        aria-label="Search this book"
        className="styled__SearchInput-sc-12dq39v-8 kGWMSU"
        data-testid="desktop-search-input"
        onChange={[Function]}
        placeholder="Search this book"
        type="search"
        value=""
      />
      <button
        aria-label="Search this book"
        className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__SearchButton-sc-12dq39v-3 dAFIlk"
        data-analytics-label="Search this book"
        data-experiment={true}
        data-testid="mobile-toggle"
        onClick={[Function]}
        type="button"
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__SearchButton-sc-12dq39v-3 eoLjh"
        data-experiment={true}
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
    </form>
  </div>
  <div
    className="styled__MobileSearchWrapper-sc-12dq39v-11 foGdGm"
  >
    <hr
      className="styled__Hr-sc-12dq39v-12 iJYKyP"
    />
    <div
      className="styled__MobileSearchContainer-sc-12dq39v-10 hKhfgu"
    >
      <button
        className="styled__PlainButton-sc-1119auh-0 styled__SeachResultsTextButton-sc-12dq39v-15 styled__CloseSearchResultsTextButton-sc-12dq39v-19 kzdVbH"
        data-testid="close-search-results"
        onClick={[Function]}
      >
        <div
          className="styled__InnerText-sc-12dq39v-14 fahaRL"
        >
          Close
        </div>
      </button>
      <form
        action="#"
        className="styled__SearchInputWrapper-sc-12dq39v-7 hpkAyy"
        data-experiment={true}
        data-testid="mobile-search"
        onSubmit={[Function]}
      >
        <input
          aria-label="Search this book"
          autoFocus={true}
          className="styled__SearchInput-sc-12dq39v-8 bHFdA"
          data-testid="mobile-search-input"
          onChange={[Function]}
          placeholder="Search this book"
          type="search"
          value=""
        />
        <button
          className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__SearchButton-sc-12dq39v-3 eoLjh"
          data-experiment={true}
          value="Search"
        >
          <svg
            aria-hidden="true"
            height="18px"
            version="1.1"
            viewBox="0 0 18 18"
            width="18px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                fillRule="nonzero"
                transform="translate(-938.000000, -206.000000)"
              >
                <path
                  d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
                />
              </g>
            </g>
          </svg>
        </button>
        
        
      </form>
    </div>
  </div>
</div>
`;

exports[`text resizer opens menu when clicking menu button 1`] = `
<div
  className="styled__TopBarWrapper-sc-12dq39v-0 aQNQa"
  data-testid="topbar"
>
  <div
    className="styled__SearchPrintWrapper-sc-12dq39v-9 cHhLGz"
  >
    <div
      className="styles__NudgeElementTarget-hrv0cf-10 BGmTi"
      id="mobile-menu-button"
    >
      <button
        aria-label="Click to open menu"
        className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__MenuButton-sc-12dq39v-2 bDNWEV"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-sc-ea9ulj-0 gWDkVc styled__HamburgerIcon-sc-12dq39v-1 fKwlfW"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 96c0-17.7 14.3-32 32-32h384c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zm0 160c0-17.7 14.3-32 32-32h384c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zm448 160c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32h384c17.7 0 32 14.3 32 32z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form
      className="styled__SearchInputWrapper-sc-12dq39v-7 hpkAyy"
      data-experiment={true}
      data-testid="desktop-search"
      onSubmit={[Function]}
    >
      <input
        aria-label="Search this book"
        className="styled__SearchInput-sc-12dq39v-8 kGWMSU"
        data-testid="desktop-search-input"
        onChange={[Function]}
        placeholder="Search this book"
        type="search"
        value=""
      />
      <button
        aria-label="Search this book"
        className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__SearchButton-sc-12dq39v-3 dAFIlk"
        data-analytics-label="Search this book"
        data-experiment={true}
        data-testid="mobile-toggle"
        onClick={[Function]}
        type="button"
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__SearchButton-sc-12dq39v-3 eoLjh"
        data-experiment={true}
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
    </form>
    <div
      className="Dropdown__TabHiddenDropDown-rmc6yw-1 kbMrSv Dropdown-rmc6yw-5 fBPFfC styled__TextResizerDropdown-sc-12dq39v-16 gZvMfu"
    >
      <button
        aria-label="Change text size"
        className="Button__PlainButton-ayg7nk-2 chgswm Filters__Toggle-sc-1fn81fx-1 gsKueT Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
        data-analytics-label="Change text size"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          <img
            alt=""
            aria-hidden="true"
            src="text-size.svg"
          />
        </div>
      </button>
      <div
        className="styled__TextResizerMenu-sc-12dq39v-17 eDJseE"
        tabIndex={0}
      >
        <label
          id="text-resizer-label"
        >
          Text size
        </label>
        <div
          className="controls"
        >
          <button
            aria-label="Decrease text size"
            className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__TextResizerChangeButton-sc-12dq39v-18 hPlFJJ"
            data-testid="decrease-text-size"
            onClick={[Function]}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size-decrease.svg"
            />
          </button>
          <input
            aria-labelledby="text-resizer-label"
            data-testid="change-text-size"
            max={3}
            min={-2}
            onChange={[Function]}
            step="1"
            type="range"
            value={0}
          />
          <button
            aria-label="Increase text size"
            className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__TextResizerChangeButton-sc-12dq39v-18 hPlFJJ"
            data-testid="increase-text-size"
            onClick={[Function]}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size-increase.svg"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="styled__MobileSearchWrapper-sc-12dq39v-11 foGdGm"
  >
    <hr
      className="styled__Hr-sc-12dq39v-12 iJYKyP"
    />
    <div
      className="styled__MobileSearchContainer-sc-12dq39v-10 hKhfgu"
    >
      <button
        className="styled__PlainButton-sc-1119auh-0 styled__SeachResultsTextButton-sc-12dq39v-15 styled__CloseSearchResultsTextButton-sc-12dq39v-19 kzdVbH"
        data-testid="close-search-results"
        onClick={[Function]}
      >
        <div
          className="styled__InnerText-sc-12dq39v-14 fahaRL"
        >
          Close
        </div>
      </button>
      <form
        action="#"
        className="styled__SearchInputWrapper-sc-12dq39v-7 hpkAyy"
        data-experiment={true}
        data-testid="mobile-search"
        onSubmit={[Function]}
      >
        <input
          aria-label="Search this book"
          autoFocus={true}
          className="styled__SearchInput-sc-12dq39v-8 bHFdA"
          data-testid="mobile-search-input"
          onChange={[Function]}
          placeholder="Search this book"
          type="search"
          value=""
        />
        <button
          className="styled__PlainButton-sc-1119auh-0 kPdLbJ styled__SearchButton-sc-12dq39v-3 eoLjh"
          data-experiment={true}
          value="Search"
        >
          <svg
            aria-hidden="true"
            height="18px"
            version="1.1"
            viewBox="0 0 18 18"
            width="18px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                fillRule="nonzero"
                transform="translate(-938.000000, -206.000000)"
              >
                <path
                  d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
                />
              </g>
            </g>
          </svg>
        </button>
        
        
      </form>
      <div
        className="Dropdown__TabHiddenDropDown-rmc6yw-1 kbMrSv Dropdown-rmc6yw-5 fBPFfC styled__TextResizerDropdown-sc-12dq39v-16 gZvMfu"
      >
        <button
          aria-label="Change text size"
          className="Button__PlainButton-ayg7nk-2 chgswm Filters__Toggle-sc-1fn81fx-1 liapzj Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
          data-analytics-label="Change text size"
          onClick={[Function]}
        >
          <div
            tabIndex={-1}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size.svg"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
